new commit to pom.xml file version 0.0.5 and description

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.spring</groupId>
 	<artifactId>bioMedical</artifactId>
-	<version>0.0.7-RELEASE</version>
+	<version>0.0.5-RELEASE</version>
 	<name>bioMedical</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo java-project for Spring Boot</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
